--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "reset-css": "^5.0.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
