--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -64,5 +64,8 @@
   },
   "devDependencies": {
     "webpack-cli": "^4.10.0"
+  },
+  "engines": {
+    "node": "16.14.2"
   }
 }
